--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul class="menu">
+        <li class="item">
+            Home
+        </li>
+         <li class="item">
+            Videos
+        </li>
+         <li class="item">
+            Works
+        </li>
+         <li class="item">
+            Writings
+        </li>
+         <li class="item">
+            Contact
+        </li>
+    </ul>
     <section id="welcome">
         <div class="parallex-inner">
-            <img id="Tim" src="STBL img.jpg">
+            <img src="Sir_Tim_Berners-Lee_(cropped).jpg" id="Tim">
             <h1>I am Tim Berners Lee.</h1>
             <h2>I am the founder of the www: world wide web.</h2>
         </div>
